// Race Telemetry Workbench database model.
// Open this file in https://dbdiagram.io or any DBML-compatible viewer.

Table sessions {
  session_id text [pk]
  year int [not null]
  event_name text [not null]
  circuit_name text
  country text
  session_type text [not null]
  session_start_utc timestamptz
  session_end_utc timestamptz
  source text [not null]
  imported_at_utc timestamptz [not null]
  metadata jsonb [not null]
}

Table session_drivers {
  session_id text [not null]
  driver_code text [not null]
  driver_number int
  full_name text
  team_name text
  metadata jsonb [not null]

  indexes {
    (session_id, driver_code) [pk]
  }
}

Table laps {
  lap_id text [pk]
  session_id text [not null]
  driver_code text [not null]
  lap_number int [not null]
  stint_number int
  lap_start_utc timestamptz
  lap_end_utc timestamptz
  lap_time_ms int
  sector_1_ms int
  sector_2_ms int
  sector_3_ms int
  compound text
  tyre_life int
  is_pit_out_lap boolean [not null]
  is_pit_in_lap boolean [not null]
  is_deleted boolean [not null]
  is_accurate boolean
  metadata jsonb [not null]

  indexes {
    (session_id, driver_code, lap_number) [unique]
  }
}

Table telemetry_samples {
  sample_time_utc timestamptz [not null]
  session_id text [not null]
  driver_code text [not null]
  lap_number int
  session_time_ms bigint
  lap_time_ms bigint
  speed_kmh double
  throttle_pct double
  brake_pct double
  gear int
  rpm double
  drs int
  sample_source text
  source_sample_index bigint
  metadata jsonb [not null]

  indexes {
    (sample_time_utc, session_id, driver_code) [pk]
  }
}

Table position_samples {
  sample_time_utc timestamptz [not null]
  session_id text [not null]
  driver_code text [not null]
  lap_number int
  x double
  y double
  z double
  track_status text
  sample_source text
  source_sample_index bigint
  metadata jsonb [not null]

  indexes {
    (sample_time_utc, session_id, driver_code) [pk]
  }
}

Table aligned_telemetry_10hz {
  sample_time_utc timestamptz [not null]
  session_id text [not null]
  session_key int [not null]
  driver_number int [not null]
  driver_code text [not null]
  lap_number int
  sample_index int [not null]
  session_time_ms bigint
  lap_time_ms bigint
  speed double
  rpm double
  n_gear int
  throttle double
  brake double
  drs int
  x double
  y double
  z double
  location_status text
  source_car_time timestamptz
  source_location_time timestamptz
  car_sample_age_ms int
  location_sample_age_ms int
  is_interpolated_car boolean [not null]
  is_interpolated_location boolean [not null]
  quality_flags text[] [not null]
  alignment_version int [not null]
  alignment_method text [not null]
  created_at timestamptz [not null]

  indexes {
    (sample_time_utc, session_key, driver_number) [pk]
  }
}

Table lap_telemetry_by_distance {
  session_id text [not null]
  session_key int [not null]
  driver_number int [not null]
  driver_code text
  lap_number int [not null]
  distance_m double [not null]
  normalized_track_progress double [not null]
  lap_elapsed_time_ms bigint
  session_time_ms bigint
  speed_kmh double
  throttle_pct double
  brake_pct double
  gear int
  rpm double
  drs int
  x double
  y double
  z double
  source_sample_before_time_utc timestamptz
  source_sample_after_time_utc timestamptz
  interpolated boolean [not null]
  quality_flags text[] [not null]
  alignment_version int [not null]
  created_at timestamptz [not null]

  indexes {
    (session_id, driver_number, lap_number, distance_m) [pk]
  }
}

Table lap_telemetry_quality {
  session_id text [not null]
  driver_number int [not null]
  lap_number int [not null]
  official_lap_duration_ms bigint
  telemetry_covered_duration_ms bigint
  first_sample_offset_ms bigint
  last_sample_offset_ms bigint
  maximum_car_data_gap_ms bigint
  maximum_position_gap_ms bigint
  final_integrated_distance_m double
  interpolated_car_data_percentage double
  interpolated_position_percentage double
  stale_sample_percentage double
  distance_delta_validation_ms bigint
  quality_status text [not null]
  quality_messages text[] [not null]
  created_at timestamptz [not null]

  indexes {
    (session_id, driver_number, lap_number) [pk]
  }
}

Table telemetry_ingestion_diagnostics {
  diagnostic_id bigint [pk]
  session_id text [not null]
  session_key int [not null]
  driver_number int [not null]
  driver_code text [not null]
  stream_name text [not null]
  sample_count bigint [not null]
  first_sample_utc timestamptz
  last_sample_utc timestamptz
  min_delta_ms double
  median_delta_ms double
  p90_delta_ms double
  p99_delta_ms double
  max_delta_ms double
  estimated_hz double
  duplicate_timestamp_count int [not null]
  out_of_order_count int [not null]
  warnings text[] [not null]
  created_at_utc timestamptz [not null]
}

Table circuit_metadata {
  session_id text [pk]
  rotation_degrees double
  source text [not null]
  metadata jsonb [not null]
}

Table circuit_markers {
  circuit_marker_id bigint [pk]
  session_id text [not null]
  marker_type text [not null]
  marker_number int
  marker_letter text
  x double [not null]
  y double [not null]
  angle_degrees double
  distance_m double
  metadata jsonb [not null]
}

Table weather_samples {
  sample_time_utc timestamptz [not null]
  session_id text [not null]
  session_time_ms bigint [not null]
  air_temp_c double
  track_temp_c double
  humidity_pct double
  pressure_mbar double
  rainfall boolean
  wind_direction_deg int
  wind_speed_mps double
  metadata jsonb [not null]

  indexes {
    (sample_time_utc, session_id) [pk]
  }
}

Table track_status_events {
  session_id text [not null]
  event_time_ms bigint [not null]
  status_code text [not null]
  message text
  metadata jsonb [not null]

  indexes {
    (session_id, event_time_ms, status_code) [pk]
  }
}

Table session_status_events {
  session_id text [not null]
  event_time_ms bigint [not null]
  status text [not null]
  metadata jsonb [not null]

  indexes {
    (session_id, event_time_ms, status) [pk]
  }
}

Table race_control_messages {
  race_control_message_id bigint [pk]
  session_id text [not null]
  message_time_utc timestamptz
  session_time_ms bigint
  category text
  message text [not null]
  status text
  flag text
  scope text
  sector text
  racing_number int
  lap_number int
  metadata jsonb [not null]
}

Ref: session_drivers.session_id > sessions.session_id [delete: cascade]
Ref: laps.session_id > sessions.session_id [delete: cascade]
Ref: laps.(session_id, driver_code) > session_drivers.(session_id, driver_code) [delete: cascade]
Ref: telemetry_samples.(session_id, driver_code) > session_drivers.(session_id, driver_code) [delete: cascade]
Ref: position_samples.(session_id, driver_code) > session_drivers.(session_id, driver_code) [delete: cascade]
Ref: aligned_telemetry_10hz.session_id > sessions.session_id [delete: cascade]
Ref: aligned_telemetry_10hz.(session_id, driver_code) > session_drivers.(session_id, driver_code) [delete: cascade]
Ref: lap_telemetry_by_distance.session_id > sessions.session_id [delete: cascade]
Ref: lap_telemetry_by_distance.(session_id, driver_code) > session_drivers.(session_id, driver_code) [delete: cascade]
Ref: lap_telemetry_quality.session_id > sessions.session_id [delete: cascade]
Ref: telemetry_ingestion_diagnostics.session_id > sessions.session_id [delete: cascade]
Ref: telemetry_ingestion_diagnostics.(session_id, driver_code) > session_drivers.(session_id, driver_code) [delete: cascade]
Ref: circuit_metadata.session_id > sessions.session_id [delete: cascade]
Ref: circuit_markers.session_id > sessions.session_id [delete: cascade]
Ref: weather_samples.session_id > sessions.session_id [delete: cascade]
Ref: track_status_events.session_id > sessions.session_id [delete: cascade]
Ref: session_status_events.session_id > sessions.session_id [delete: cascade]
Ref: race_control_messages.session_id > sessions.session_id [delete: cascade]
